--- a/MQ-Sign-LR/reference_implementation/Makefile
+++ b/MQ-Sign-LR/reference_implementation/Makefile
@@ -7,8 +7,8 @@ NISTFLAGS += -Wno-unused-result -O3 -mpopcnt -maes -mbmi2 \
   -march=native -mtune=native
 SOURCES = aes.c blas_comm.c blas_matrix_ref.c blas_matrix.c fips202.c mqs_keypair_computation.c \
 		mqs_keypair.c mqs.c parallel_matrix_op.c rng.c sign.c utils_hash.c utils_prng.c
-HEADERS = aes.h api.h blas_comm.h blas_matrix_ref.h blas_matrix.h blas_u32.h blas.h fips202.h \
-		gf16.h hash_len_config.h mpkc.h mqs_blas.h mqs_config.h mqs_keypair_computation.h \
+HEADERS = aes.h api.h blas_comm.h blas_matrix_ref.h blas_matrix.h blas_u32.h blas.h  crypto_declassify.h \
+		fips202.h gf16.h hash_len_config.h mpkc.h mqs_blas.h mqs_config.h mqs_keypair_computation.h \
 		mqs_keypair.h mqs.h parallel_matrix_op.h rng.h utils_hash.h utils_malloc.h utils_prng.h
 
 .PHONY: all test_speed PQCgenKAT_sign clean
